--- a/src/utils/css/styles.css
+++ b/src/utils/css/styles.css
@@ -331,54 +331,6 @@ img {
 .btn-icon {
     margin-left: 1rem;
 }
-
-/* Media Queries */
-
-@media(max-width:960px) {
-    .showcase {
-        height: 94vh;
-    }
-
-    .hide-sm {
-        display: none;
-    }
-
-    .showcase-top img {
-        top: 30%;
-        left: 5%;
-        transform: translate(0);
-    }
-
-    .showcase-content h1 {
-        font-size: 3.6rem;
-        line-height: 1;
-    }
-
-    .showcase-content p {
-        font-size: 1.5rem;
-    }
-
-    .btn-xl {
-        font-size: 1.6rem;
-    }
-
-    .text-xl {
-        font-size: 1.5rem;
-    }
-
-    .text-lg {
-        font-size: 1.2rem;
-    }
-    
-    .text-md {
-        font-size: 1rem;
-    }
-
-    .footer {
-        max-width: 85%;
-    }
-}
-
 .credits{
     border-top: var(--netflix-red) 4px solid;
     background: #3d3d3d;
@@ -468,22 +420,100 @@ img {
 
 
 
+
+
+
+
+
+
+
+
+/* Media Queries */
+
+@media(max-width:960px) {
+    .showcase {
+        height: 94vh;
+    }
+
+    .hide-sm {
+        display: none;
+    }
+
+    .showcase-top img {
+        top: 30%;
+        left: 5%;
+        transform: translate(0);
+    }
+
+    .showcase-content h1 {
+        font-size: 3.6rem;
+        line-height: 1;
+    }
+
+    .showcase-content p {
+        font-size: 1.5rem;
+    }
+
+    .btn-xl {
+        font-size: 1.6rem;
+    }
+
+    .text-xl {
+        font-size: 1.5rem;
+    }
+
+    .text-lg {
+        font-size: 1.2rem;
+    }
+    
+    .text-md {
+        font-size: 1rem;
+    }
+
+    .footer {
+        max-width: 85%;
+    }
+}
+
+
+
+
+
+
 @media(max-width:800px) {
     .showcase::after {
         background: rgba(0, 0, 0, 0.01);
     }
-
     #tab-1-content-inner {
         grid-template-columns: 1fr;
         text-align: center;
     }
-
     #tab-2-content .tab-2-content-top {
         display: block;
         text-align: center;
     }
-
     #tab-2-content .tab-2-content-bottom {
         grid-template-columns: 1fr;
     }
+    .showcase-top img{
+        width: 100px;
+    }
+    .showcase-content h1 {
+        font-size: 4rem;
+    }    
+    .showcase-content p {
+        font-size: 1rem;
+    }   
+    .btn-xl {
+        font-size: 1rem;
+        padding: 1rem 2rem;
+    } 
+    .text-lg {
+        font-size: 1rem;
+    }
+    .btn-lg {
+        margin-right: 0.2rem;
+        padding: 0.3rem 0.8rem;
+    }
 }
+
